Add: man_1_simple_shell Update: AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
-Shan Liang <12104@holbertonstudents.com>
+# This file lists all contributors to the repository.
+
+Yongshan Liang <12104@holbertonstudents.com>
 Joleen Thelen <12113@holbertonstudents.com>
 
